@startuml Class Diagram - Society Management System

title Society Management System - Class Diagram

class User {
    - id: int
    - name: string
    - email: string
    - password: string
    - role: string
    - phone: string
    - profile_pic: string
    - created_at: datetime
    + login(): boolean
    + updateProfile(): void
    + changePassword(): void
}

class Resident {
    - id: int
    - user_id: int
    - flat_number: string
    - block_id: int
    - resident_type: string
    - occupancy_start: date
    + registerVisitor(): void
    + submitComplaint(): void
    + payBill(): void
}

class Block {
    - id: int
    - block_name: string
    + addFlat(): void
    + getFlats(): List<Flat>
}

class Flat {
    - id: int
    - block_id: int
    - flat_number: string
    - status: string
    - owner_name: string
    + assignResident(): void
    + updateStatus(): void
}

class Visitor {
    - id: int
    - resident_id: int
    - visitor_name: string
    - contact: string
    - visit_purpose: string
    - visit_date: date
    - visit_time: time
    - status: string
    + approve(): void
    + reject(): void
    + markExit(): void
}

class Complaint {
    - id: int
    - resident_id: int
    - category: string
    - description: string
    - status: string
    - priority: string
    - ai_score: float
    - complaint_date: date
    + assignTo(): void
    + updateStatus(): void
    + resolve(): void
}

class MaintenanceBill {
    - id: int
    - resident_id: int
    - flat_number: string
    - amount: decimal
    - due_date: date
    - status: string
    - late_fine: decimal
    - created_date: datetime
    + calculateLateFine(): decimal
    + markAsPaid(): void
}

class Payment {
    - id: int
    - bill_id: int
    - resident_id: int
    - amount: decimal
    - payment_date: date
    - payment_method: string
    - receipt_number: string
    - status: string
    + processPayment(): boolean
    + generateReceipt(): string
}

class Event {
    - id: int
    - title: string
    - description: string
    - event_date: date
    - event_time: time
    - venue: string
    - organizer: string
    - max_attendees: int
    - image_path: string
    + registerAttendee(): void
    + updateDetails(): void
}

class Notice {
    - id: int
    - title: string
    - content: string
    - posted_by: int
    - posted_at: datetime
    - priority: string
    + publish(): void
    + update(): void
    + delete(): void
}

class Parking {
    - id: int
    - resident_id: int
    - slot_number: string
    - slot_type: string
    - vehicle_number: string
    - status: string
    + allocate(): void
    + deallocate(): void
    + updateVehicle(): void
}

class Delivery {
    - id: int
    - resident_id: int
    - delivery_company: string
    - delivery_item: string
    - arrival_time: datetime
    - status: string
    + markReceived(): void
    + markDelivered(): void
}

class Charity {
    - id: int
    - title: string
    - description: string
    - target_amount: decimal
    - collected_amount: decimal
    - start_date: date
    - end_date: date
    - status: string
    + addDonation(): void
    + updateProgress(): void
}

class EmergencyContact {
    - id: int
    - name: string
    - contact_type: string
    - phone_number: string
    - priority: int
    - is_active: boolean
    + updateContact(): void
    + deactivate(): void
}

class EmergencyLog {
    - id: int
    - resident_id: int
    - emergency_type: string
    - description: string
    - log_time: datetime
    - resolved: boolean
    + markResolved(): void
    + updateDetails(): void
}

class Settings {
    - id: int
    - society_name: string
    - society_address: string
    - society_phone: string
    - society_email: string
    + updateSettings(): void
}

' Relationships
User ||--o{ Resident : has
User ||--o{ Visitor : registers
User ||--o{ Complaint : submits
User ||--o{ Payment : makes
User ||--o{ Event : creates
User ||--o{ Notice : posts
User ||--o{ EmergencyLog : logs

Block ||--o{ Flat : contains
Block ||--o{ Resident : belongs

Flat ||--o{ Resident : occupied by
Flat ||--o{ MaintenanceBill : has bills for

Resident ||--o{ Visitor : invites
Resident ||--o{ Complaint : submits
Resident ||--o{ MaintenanceBill : receives
Resident ||--o{ Payment : makes
Resident ||--o{ Parking : owns
Resident ||--o{ Delivery : receives
Resident ||--o{ EmergencyLog : logs

MaintenanceBill ||--o{ Payment : paid by

Event ||--o{ EventRegistration : has registrations

Charity ||--o{ CharityDonation : receives

@enduml
